fragment框架搭建完成

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,24 +3,38 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_shopping"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="购物" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_game"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="游戏" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_entertainment"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="娱乐" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_society"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="社交" />
+        <item
+            android:id="@+id/nav_school"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="校园" />
+        <item
+            android:id="@+id/nav_news"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="新闻" />
+
+        <item
+            android:id="@+id/nav_exit"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="退出登录" />
+
     </group>
 
-    <item android:title="Communicate">
+<!--    <item android:title="Communicate">
         <menu>
             <item
                 android:id="@+id/nav_share"
@@ -31,6 +45,6 @@
                 android:icon="@drawable/ic_menu_send"
                 android:title="Send" />
         </menu>
-    </item>
+    </item>-->
 
 </menu>
